Changes for 1.5:

 - [DEV-62] added availability to select all hosts in "Availability report" (Artem)
 - [DEV-75] Empty command result window (Sasha)
 - [DEV-74] Scripts of all nodes are displayed (Sasha)
 - [DEV-54] added zoom for graphs (Artem)
 - [DEV-48] Support of Ping and Traceroute in Status of Triggers screen (Sasha)
 - [DEV-57] added better "hosts info" selection in screens (Artem)
 - [DEV-56] added better item selection in screens (Artem)
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-45] added new design of Status of Triggers (Artem)
 - [DEV-47] added support of selection of events and bulk acknowledge of events (Artem)
 - [DEV-1] added new graph bar (Artem)
 - support of database cache for history and trends (Alexei)
 - basic support of database caching (Alexei)
 - added pie graphs (Artem)
 - added new columns graphs.show_legend, graphs.show_3d (Alexei)
 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-134] fixes for hostid/groupid validation on Node switch (Artem)
 - [ZBX-131] fixed viewing password on install in plain text (Artem)
 - [ZBX-81] fix for item delay calculation problem in graphs (Artem)
 - [ZBX-107] do not display log related items in the queue (Alexei)
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - [ZBX-102] Distributed monitoring: overwriting information (Sasha)
 - [ZBX-30,ZBX-47] better dependencies (Alexei)
 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)